--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/bcryptjs": "^2.4.4",
+    "@types/cookie-parser": "^1.4.4",
     "@types/express": "^4.17.19",
+    "@types/express-session": "^1.17.8",
+    "@types/hapi__joi": "^17.1.11",
+    "@types/jsonwebtoken": "^9.0.3",
     "@types/nodemon": "^1.19.3",
-    "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-session": "^1.17.3",
     "mongoose": "^7.6.1",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
