--- a/package.json
+++ b/package.json
@@ -7,21 +7,19 @@
     "start": "nodemon src/index.ts",
     "build": "npx tsc",
     "dev-ts-node": "ts-node-dev --respawn src/index.ts",
-    "dev-con": "concurrently \"npx tsc --watch\" \"nodemon -q src/index.ts\"",
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q src/index.ts\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/bcryptjs": "^2.4.4",
-    "@types/cookie-parser": "^1.4.4",
-    "@types/express": "^4.17.19",
-    "@types/express-session": "^1.17.8",
-    "@types/hapi__joi": "^17.1.11",
-    "@types/jsonwebtoken": "^9.0.3",
-    "@types/nodemon": "^1.19.3",
+    "@hapi/joi": "^17.1.1",
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.1",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
@@ -29,6 +27,13 @@
     "typescript": "^5.2.2"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.4",
+    "@types/cookie-parser": "^1.4.4",
+    "@types/express": "^4.17.19",
+    "@types/express-session": "^1.17.8",
+    "@types/hapi__joi": "^17.1.11",
+    "@types/jsonwebtoken": "^9.0.3",
+    "@types/nodemon": "^1.19.3",
     "concurrently": "^8.2.1"
   }
 }
